@@ -12,7 +12,7 @@ package com.ibm.ws.jmx.connector.local;
 
 import java.io.IOException;
 import java.io.OutputStream;
-import java.lang.reflect.Method;
+import java.lang.management.ManagementFactory;
 import java.security.AccessController;
 import java.security.PrivilegedAction;
 import java.util.Properties;
@@ -62,26 +62,59 @@ public final class LocalConnectorActivator {
                             System.setProperty(RMI_SERVER_HOSTNAME_PROPERTY, LOOPBACK_ADDRESS);
                         }
 
+                        String localConnectorAddress = null;
                         // Start the JMX agent and retrieve the local connector address.
-                        // TODO: Find a proper way to get the JMX agent's local connector address
-                        //       for now we need to depend on JDK internal APIs
-                        ClassLoader systemClassLoader = ClassLoader.getSystemClassLoader();
-                        Class<?> clazz1 = JavaInfo.majorVersion() < 9 
-							? Class.forName("sun.management.Agent", true, systemClassLoader) 
-							: Class.forName("jdk.internal.agent.Agent", true, systemClassLoader);
-                        Method m1 = clazz1.getMethod("agentmain", String.class);
-                        m1.invoke(null, (Object) null);
-                        String localConnectorAddress = System.getProperty(LOCAL_CONNECTOR_ADDRESS_PROPERTY);
-                        if (localConnectorAddress == null) {
-                            Class<?> clazz2 = JavaInfo.majorVersion() < 9 
-								? Class.forName("sun.misc.VMSupport", true, systemClassLoader) 
-								: Class.forName("jdk.internal.vm.VMSupport", true, systemClassLoader);
-                            Method m2 = clazz2.getMethod("getAgentProperties");
-                            Properties props = (Properties) m2.invoke(null);
-                            if (TraceComponent.isAnyTracingEnabled() && tc.isDebugEnabled()) {
-                                Tr.debug(tc, "Attempting to retrieve the connector address from agent properties.");
+                        if (JavaInfo.majorVersion() < 9 ||
+                            (JavaInfo.majorVersion() >= 9 && !Boolean.getBoolean("jdk.attach.allowAttachSelf"))) {
+                            if (TraceComponent.isAnyTracingEnabled() && tc.isDebugEnabled())
+                                Tr.debug(tc, "Using old code path for self attach using JDK internal APIs",
+                                         JavaInfo.majorVersion(),
+                                         Boolean.getBoolean("jdk.attach.allowAttachSelf"));
+                            // Use JDK internal APIs for Java 8 and older OR if the server was launched in a way that bypassed
+                            // the wlp/bin/server script and therefore did not get the -Djdk.attach.allowAttachSelf=true prop set
+                            // TODO: Also go down this path if j2sec is enabled, because the proper API path has permission issues
+                            //       which are being looked at under https://github.com/eclipse/openj9/issues/6119
+
+                            // Use reflection to invoke...
+                            // Agent.agentmain(null);
+                            // Properties props = VMSupport.getAgentProperties()
+                            ClassLoader systemClassLoader = ClassLoader.getSystemClassLoader();
+                            Class<?> Agent = JavaInfo.majorVersion() < 9 //
+                                            ? Class.forName("sun.management.Agent", true, systemClassLoader) //
+                                            : Class.forName("jdk.internal.agent.Agent", true, systemClassLoader);
+                            Agent.getMethod("agentmain", String.class).invoke(null, (Object) null);
+
+                            localConnectorAddress = System.getProperty(LOCAL_CONNECTOR_ADDRESS_PROPERTY);
+                            if (localConnectorAddress == null) {
+                                Class<?> VMSupport = JavaInfo.majorVersion() < 9 //
+                                                ? Class.forName("sun.misc.VMSupport", true, systemClassLoader) //
+                                                : Class.forName("jdk.internal.vm.VMSupport", true, systemClassLoader);
+                                Properties props = (Properties) VMSupport.getMethod("getAgentProperties").invoke(null);
+                                if (TraceComponent.isAnyTracingEnabled() && tc.isDebugEnabled()) {
+                                    Tr.debug(tc, "Attempting to retrieve the connector address from agent properties.");
+                                }
+                                localConnectorAddress = props.getProperty(LOCAL_CONNECTOR_ADDRESS_PROPERTY);
                             }
-                            localConnectorAddress = props.getProperty(LOCAL_CONNECTOR_ADDRESS_PROPERTY);
+                        } else {
+                            if (TraceComponent.isAnyTracingEnabled() && tc.isDebugEnabled())
+                                Tr.debug(tc, "Using public API code path for self attach");
+                            // This code path uses public Java APIs and is the preferred approach for self-attach (used for JDK 9+)
+
+                            // Manually initialize the PlatformMBeanServer here where we have access to com.ibm.ws.kernel.boot.jmx.internal.PlatformMBeanServerBuilder.
+                            // If we do not manually initialize here, Hotspot will try to do so using JDK classloaders when we call
+                            // VirtualMachine.startLocalManagementAgent() which will fail with a CNFE.
+                            ManagementFactory.getPlatformMBeanServer();
+
+                            // Use reflection to invoke...
+                            // VirtualMachine vm = VirtualMachine.attach(String.valueOf(ProcessHandle.current().pid()));
+                            // localConnectorAddress = vm.startLocalManagementAgent();
+                            Class<?> ProcessHandle = Class.forName("java.lang.ProcessHandle");
+                            Object processHandle = ProcessHandle.getMethod("current").invoke(null);
+                            long pid = (long) ProcessHandle.getMethod("pid").invoke(processHandle);
+
+                            Class<?> VirtualMachine = Class.forName("com.sun.tools.attach.VirtualMachine");
+                            Object vm = VirtualMachine.getMethod("attach", String.class).invoke(null, String.valueOf(pid));
+                            localConnectorAddress = (String) VirtualMachine.getMethod("startLocalManagementAgent").invoke(vm);
                         }
 
                         if (TraceComponent.isAnyTracingEnabled() && tc.isDebugEnabled()) {
@@ -109,12 +142,15 @@ public final class LocalConnectorActivator {
             return LOCAL_CONNECTOR_ADDRESS;
         }
 
-        private LocalConnectorHelper() {}
+        private LocalConnectorHelper() {
+        }
     }
 
-    public LocalConnectorActivator() {}
+    public LocalConnectorActivator() {
+    }
 
-    protected void activate(ComponentContext compContext) {}
+    protected void activate(ComponentContext compContext) {
+    }
 
     protected void deactivate(ComponentContext compContext) {
         removeJMXAddressResource(localJMXAddressWorkareaFile);
